test/disabled/neg/macro-keyword-val.scala
object Test1 {
  val macro = ???
}