test/disabled/neg/macro-keyword-val.check
macro-keyword-val.scala:2: error: illegal start of simple pattern
  val macro = ???
      ^
macro-keyword-val.scala:3: error: '=' expected but '}' found.
}
^
two errors found
